# Majestic

./: CMakeLists.txt  README.md  Resources.qrc  ninja.run  run
include/: about_dialog.hpp  client.hpp  constants.hpp  login_widget.hpp  main_window.hpp
proto/: CMakeLists.txt  majestic.proto
src/: about_dialog.cpp  client.cpp  login_widget.cpp  main.cpp  main_window.cpp
ui/: about_dialog.ui  main_window.ui
